--- a/chamberofunity/athens.html
+++ b/chamberofunity/athens.html
@@ -80,6 +80,38 @@
             <h3>Education</h3>
             <p>The Athens City School System has four elementary schools, one intermediate school,
                 one middle school, and one high school. The city has two private K-12 schools.</p>
+            <h3>Events and Places of Interest</h3>
+            <p>The Athens area is host to a number of cultural,
+                sports, and outdoor recreation opportunities.
+                One of the best known yearly events in Athens
+                is the Tennessee Valley Old Time Fiddlers Convention,
+                which is held at Athens State University every October
+                and attracts approximately 15,000 music lovers from across
+                the country. 
+                Donnell House
+                In addition to the weekend of musical competition,
+                hundreds of musicians participate in the numerous
+                jam sessions conducted across the campus. Another
+                event is the Annual Storytelling Festival, spanning
+                three days in downtown Athens every October and featuring
+                story tellers from across the nation. The Alabama Veterans
+                Museum and Archives, located in the former L&N freight depot,
+                features displays of memorabilia from the Revolutionary War
+                to the present in honor of veterans. A number of structures
+                in Athens are listed on the National Register of Historic
+                Places, including the Robert Donnell House (1840), Cotton
+                Hill (ca. 1828), the Joel Eddins House (ca. 1810), Fort
+                Henderson, and the Courthouse Square and State College
+                Historic Districts.
+                Wheeler Lake, the second largest reservoir in Alabama,
+                is known for its catfish population. In 1996, the world
+                record blue catfish, 111 pounds, was caught in the Wheeler
+                reservoir. The city of Athens Parks and Recreation Department
+                maintains and manages five city parks, the Athens Recreation
+                Center, and the Athens Sportsplex. Every September, Athens
+                hosts its annual Grease Fest, in which celebrants dress in
+                togas and consume greasy foods such as fried cookies and snack cakes.
+                </p>
         </div>
         <div class="events">
             <h2>Upcoming Local Events</h2>
