--- a/chamberofunity/athens.html
+++ b/chamberofunity/athens.html
@@ -88,13 +88,18 @@
                 which is held at Athens State University every October
                 and attracts approximately 15,000 music lovers from across
                 the country. 
+            </br>
+            </br>
                 Donnell House
                 In addition to the weekend of musical competition,
                 hundreds of musicians participate in the numerous
                 jam sessions conducted across the campus. Another
                 event is the Annual Storytelling Festival, spanning
                 three days in downtown Athens every October and featuring
-                story tellers from across the nation. The Alabama Veterans
+                story tellers from across the nation. 
+            </br>
+            </br>
+                The Alabama Veterans
                 Museum and Archives, located in the former L&N freight depot,
                 features displays of memorabilia from the Revolutionary War
                 to the present in honor of veterans. A number of structures
@@ -103,6 +108,8 @@
                 Hill (ca. 1828), the Joel Eddins House (ca. 1810), Fort
                 Henderson, and the Courthouse Square and State College
                 Historic Districts.
+            </br>
+            </br>
                 Wheeler Lake, the second largest reservoir in Alabama,
                 is known for its catfish population. In 1996, the world
                 record blue catfish, 111 pounds, was caught in the Wheeler
@@ -111,7 +118,7 @@
                 Center, and the Athens Sportsplex. Every September, Athens
                 hosts its annual Grease Fest, in which celebrants dress in
                 togas and consume greasy foods such as fried cookies and snack cakes.
-                </p>
+            </p>
         </div>
         <div class="events">
             <h2>Upcoming Local Events</h2>
