populated thanks and joib page no css

--- a/chamberofunity/thanks.html
+++ b/chamberofunity/thanks.html
@@ -43,7 +43,7 @@
         
         <div class="athens">
             <h2>Thank You for Applying</h2>
-            <p>We will reach out in a couple of days after reviewing your application. 
+            <p>Please allow time to review and proccess of your application, we will reach out by email with additional information. 
             </br>
             </br>
             If you have any questions please reach out to the contact information below, or on our contact page.
