--- a/chamberofunity/directory.html
+++ b/chamberofunity/directory.html
@@ -32,23 +32,16 @@
             <ul id="primaryNav" class="nav disabled">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="athens.html">Athens</a></li>
-                <li><a class="active" href="join.html">Join Us</a></li>
-                <li><a href="directory.html">Directory</a></li>
+                <li><a href="join.html">Join Us</a></li>
+                <li><a class="active" href="directory.html">Directory</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
     </nav>
     <main>
-            
+       <div class="directory">
         
-        <div class="athens">
-            <h2>Thank You for Applying</h2>
-            <p>Please allow time to review and proccess of your application, we will reach out by email with additional information. 
-            </br>
-            </br>
-            If you have any questions please reach out to the contact information below, or on our contact page.
-            </p>
-        </div>
+       </div>
     </main>
     <footer>
         <div class="footerData">
@@ -81,6 +74,7 @@
                 </a>
             </div>
             <div class="info">
+                <p>Historical data provided by encyclopediaofalabama.org/article/h-2604 </p>
                 <p>&copy; <span id="getYear"></span> | Matthew Felton</p>
                 <p class="last"><span id="modified"></span></p>
             </div>
@@ -88,5 +82,6 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/allpagescripts.js"></script>
+    <script src="js/directory.js"></script>
   </body>
 </html>
