--- a/chamberofunity/athens.html
+++ b/chamberofunity/athens.html
@@ -33,7 +33,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a class="active" href="athens.html">Athens</a></li>
                 <li><a href="join.html">Join Us</a></li>
-                <li><a href="directory,html">Directory</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
