--- a/chamberofunity/index.html
+++ b/chamberofunity/index.html
@@ -39,7 +39,7 @@
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="athens.html">Athens</a></li>
                 <li><a href="join.html">Join Us</a></li>
-                <li><a href="directory,html">Directory</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
