--- a/chamberofunity/directory.html
+++ b/chamberofunity/directory.html
@@ -39,7 +39,7 @@
         </div>
     </nav>
     <main>
-       <div class="directory">
+       <div id="swap" class="directoryGrid">
         
        </div>
     </main>
