--- a/chamberofunity/directory.html
+++ b/chamberofunity/directory.html
@@ -39,9 +39,13 @@
         </div>
     </nav>
     <main>
-       <div id="swap" class="directoryGrid">
+        <div class="buttoncontainer">
+            <input class="display" type="image" src="images/grid.svg" onclick="switchgrid();"> 
+            <input class="display" type="image" src="images/list.svg" onclick="switchlist();">
+        </div>
+        <div id="swap" class="directoryList">
         
-       </div>
+        </div>
     </main>
     <footer>
         <div class="footerData">
