--- a/chamberofunity/directory.html
+++ b/chamberofunity/directory.html
@@ -40,8 +40,8 @@
     </nav>
     <main>
         <div class="buttoncontainer">
-            <input class="display" type="image" src="images/grid.svg" onclick="switchgrid();"> 
-            <input class="display" type="image" src="images/list.svg" onclick="switchlist();">
+            <input class="display" type="image" src="images/grid.svg" alt="grid view" onclick="switchgrid();"> 
+            <input class="display" type="image" src="images/list.svg" alt="liston view" click="switchlist();">
         </div>
         <div id="swap" class="directoryList">
         
