--- a/chamberofunity/directory.html
+++ b/chamberofunity/directory.html
@@ -41,7 +41,7 @@
     <main>
         <div class="buttoncontainer">
             <input class="display" type="image" src="images/grid.svg" alt="grid view" onclick="switchgrid();"> 
-            <input class="display" type="image" src="images/list.svg" alt="liston view" click="switchlist();">
+            <input class="display" type="image" src="images/list.svg" alt="liston view" onclick="switchlist();">
         </div>
         <div id="swap" class="directoryList">
         
