--- a/chamberofunity/contact.html
+++ b/chamberofunity/contact.html
@@ -5,7 +5,7 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
-    <title>Directory: Chamber of Unity</title>
+    <title>Contact: Chamber of Unity</title>
     <meta name="description" content="Athens page of the camber of unity" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/small.css" />
@@ -33,19 +33,53 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="athens.html">Athens</a></li>
                 <li><a href="join.html">Join Us</a></li>
-                <li><a class="active" href="directory.html">Directory</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="directory.html">Directory</a></li>
+                <li><a class="active" href="contact.html">Contact Us</a></li>
             </ul>
         </div>
     </nav>
     <main>
-        <div class="buttoncontainer">
-            <input class="display" type="image" src="images/grid.svg" alt="grid view" onclick="switchgrid();"> 
-            <input class="display" type="image" src="images/list.svg" alt="liston view" onclick="switchlist();">
+        <div class="contactPage">
+            <form class="contactForm" method="get" action="cthanks.html">
+                <fieldset>
+                    <legend>Request Contact</legend>
+                    <label class="ftop">Full Name* <input type="text" name="fullname" pattern="[A-za-z ]{5,}" required> </label>
+                    <label class="ftop">Email* <input type="email" name="cemail" placeholder="someone@gmail.com" required> </label>
+                    <label class="ftop">Phone <input type="tel" name="cphone" placeholder="1256831234"> </label>
+                    <br>
+                    <label class="ftop">Additional Informtion <textarea name="addedinfo" rows="20" cols="50" placeholder="Additional Comments here..."></textarea></label>
+                </fieldset>
+                <input class="submitBtn" type="submit" value="We Get Right with You">
+            </form>
+            <div class="pageContact">
+                <h2>Contact Us</h2>
+                <div class="wholeContact">
+                    <section class="address">
+                        <h4>Address:</h4>
+                        <p>Limestone Court House<br>
+                        200 W Washington St<br>
+                        Athens, AL 35611</p>
+                    </section>
+                    <section class="method">
+                        <h4>Phone:</h4>
+                        <p>(256)683-1565</p>
+                        <h4>Email:</h4>
+                        <p>matthewfelton@gmail.com</p>
+                    </section>
+                    <iframe class="googlemap" src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d124728.22213434002!2d-87.04403679756875!3d34.76541992056133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x88628b06f86c2791%3A0x5fc5af4dbbc1967a!2sAthens%2C%20AL!3m2!1d34.802866099999996!2d-86.9716741!5e0!3m2!1sen!2sus!4v1617553115282!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <div class="board">
+                <h2>Board of Directors</h2>
+                <ul>
+                    <li>Matthew Felton - Chair of the Board</li>
+                    <li>John Smith</li>
+                    <li>Abby Thomas</li>
+                    <li>Noelle Johnson</li>
+                    <li>Mike Dobbers</li>
+                </ul>
+            </div>
         </div>
-        <div id="swap" class="directoryList">
         
-        </div>
     </main>
     <footer>
         <div class="footerData">
@@ -78,7 +112,6 @@
                 </a>
             </div>
             <div class="info">
-                <p>Historical data provided by encyclopediaofalabama.org/article/h-2604 </p>
                 <p>&copy; <span id="getYear"></span> | Matthew Felton</p>
                 <p class="last"><span id="modified"></span></p>
             </div>
@@ -86,6 +119,5 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/allpagescripts.js"></script>
-    <script src="js/directory.js"></script>
   </body>
 </html>
