--- a/chamberofunity/cthanks.html
+++ b/chamberofunity/cthanks.html
@@ -5,7 +5,7 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
-    <title>Directory: Chamber of Unity</title>
+    <title>Thanks: Chamber of Unity</title>
     <meta name="description" content="Athens page of the camber of unity" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/small.css" />
@@ -33,18 +33,21 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="athens.html">Athens</a></li>
                 <li><a href="join.html">Join Us</a></li>
-                <li><a class="active" href="directory.html">Directory</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="directory.html">Directory</a></li>
+                <li><a class="active" href="contact.html">Contact Us</a></li>
             </ul>
         </div>
     </nav>
     <main>
-        <div class="buttoncontainer">
-            <input class="display" type="image" src="images/grid.svg" alt="grid view" onclick="switchgrid();"> 
-            <input class="display" type="image" src="images/list.svg" alt="liston view" onclick="switchlist();">
-        </div>
-        <div id="swap" class="directoryList">
+            
         
+        <div class="athens">
+            <h2>Thank You for Reaching Out</h2>
+            <p>We will have someone contact you as soon as possible.
+            </br>
+            </br>
+            If you have any questions please reach out to the contact information below, or on our contact page.
+            </p>
         </div>
     </main>
     <footer>
@@ -78,7 +81,6 @@
                 </a>
             </div>
             <div class="info">
-                <p>Historical data provided by encyclopediaofalabama.org/article/h-2604 </p>
                 <p>&copy; <span id="getYear"></span> | Matthew Felton</p>
                 <p class="last"><span id="modified"></span></p>
             </div>
@@ -86,6 +88,5 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/allpagescripts.js"></script>
-    <script src="js/directory.js"></script>
   </body>
 </html>
