--- a/chamberofunity/thanks.html
+++ b/chamberofunity/thanks.html
@@ -5,7 +5,7 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
-    <title>Athens: Chamber of Unity</title>
+    <title>Thanks: Chamber of Unity</title>
     <meta name="description" content="Athens page of the camber of unity" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/small.css" />
