--- a/chamberofunity/contact.html
+++ b/chamberofunity/contact.html
@@ -77,6 +77,7 @@
                         <p>matthewfelton@gmail.com</p>
                     </section>
                     <iframe class="googlemap" src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d124728.22213434002!2d-87.04403679756875!3d34.76541992056133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x88628b06f86c2791%3A0x5fc5af4dbbc1967a!2sAthens%2C%20AL!3m2!1d34.802866099999996!2d-86.9716741!5e0!3m2!1sen!2sus!4v1617553115282!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
             </div>
             
         </div>
