--- a/chamberofunity/contact.html
+++ b/chamberofunity/contact.html
@@ -59,6 +59,9 @@
                     <li>Abby Thomas</li>
                     <li>Noelle Johnson</li>
                     <li>Mike Dobbers</li>
+                    <li>Andrew Dobbers</li>
+                    <li>Kevin markers</li>
+                    <li>Charlie Unicorn</li>
                 </ul>
             </div>
             <div class="pageContact">
