--- a/chamberofunity/join.html
+++ b/chamberofunity/join.html
@@ -68,8 +68,8 @@
                 </fieldset>
                 <fieldset>
                     <legend>Membership Options</legend>
-                    <label class="sbs">Membership level (more information below)</label> 
-                    <label class="sbs"><input type="radio" name="membership" value="non-profit"> Non-profit ($100)</label>
+                    <label class="sbs">Membership level* (more information below)</label> 
+                    <label class="sbs"><input type="radio" name="membership" value="non-profit" required> Non-profit ($100)</label>
                     <label class="sbs"><input type="radio" name="membership" value="bronze"> Bronze ($200)</label>
                     <label class="sbs"><input type="radio" name="membership" value="silver"> Silver ($400)</label>
                     <label class="sbs"><input type="radio" name="membership" value="gold"> Gold ($1000)</label>
