--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <h1 id="pheader">Matthew J. Felton</h1>
     </header>
     <main>
+      <!--wdd 230 classwork-->
       <h2 id="subheader">WDD 230: Assignment Portal</h2>
       <nav>
         <ul>
@@ -34,12 +35,12 @@
           <li>Class Final: <a class="assignments" href="wdd230/chamberofunity/">Chamber of Unity</a></li>
         </ul>
       </nav>
-
+      <!--wdd 330 classwork-->
       <h2 id="subheader">WDD 330: Assignment Portal</h2>
-        <ol id="wdd330Container"></ol> 
+        <ul id="wdd330Container"></ul> 
 
 
-
+      <!--wdd 331 class project-->
       <h2 id="subheader">WDD 331: Project</h2>
       
         <ul>
