--- a/wdd330/week01/index.html
+++ b/wdd330/week01/index.html
@@ -11,11 +11,13 @@
     <link rel="stylesheet" href="https://matthewfelton.github.io/wdd330/assets/css/notes.css" />
   </head>
   <body>
-    <header></header>
-    <h1>WDD 330 Portfolio</h1>
-    <nav>
-        <a href="https://matthewfelton.github.io/">Return to the Hub</a>
-    </nav>
+    <header>
+        <h1>WDD 330 Portfolio</h1>
+        <nav>
+            <a href="https://matthewfelton.github.io/">Return to the Hub</a>
+        </nav>
+    </header>
+
     <hr/>
     <main>
         <h2>Week 01 Notes</h2>
@@ -28,7 +30,7 @@
             which is neither simple, nor beautiful.<br/>
             Joel Marsh = The Hipper Element</p>
     </main>
-    <footer></footer>
+    <footer><a href="https://matthewfelton.github.io/">Return to the Hub</a></footer>
     <script src=""></script>
   </body>
  
