--- a/wdd330/week01/index.html
+++ b/wdd330/week01/index.html
@@ -28,7 +28,20 @@
             That leads to simple beautiful apps.
             If you do it the other way around, it'll be like trying to put a marshmallow into a piggy bank,<br/> 
             which is neither simple, nor beautiful.<br/>
-            Joel Marsh = The Hipper Element</p>
+            Joel Marsh - The Hipper Element</p>
+        <hr/>
+        <h3>Questions</h3>
+        <p>Would it still be best to do mobile first for sites that are directed towards techincal use?<br/>
+            Example: IT Support Portal where users should be on laptops.</p>
+        <hr/>
+        <h3>Notes</h3>
+        <ul>
+            <li>localStorage can be used to store data. <br/>
+                Example: <br/>
+                var storyHTML = localStorage.getItem(storyName) to pull stored story name.<br/>
+                localStorage.setItem(storyName, storyHTML) to save data in those items</li>
+            <li></li>
+        </ul>
     </main>
     <footer><a href="https://matthewfelton.github.io/">Return to the Hub</a></footer>
     <script src=""></script>
