--- a/wdd330/week01/index.html
+++ b/wdd330/week01/index.html
@@ -39,7 +39,9 @@
             <li>localStorage can be used to store data. <br/>
                 Example: <br/>
                 var storyHTML = localStorage.getItem(storyName) to pull stored story name.<br/>
-                localStorage.setItem(storyName, storyHTML) to save data in those items</li>
+                localStorage.setItem(storyName, storyHTML) to save data in those items<br/>
+            <a href="https://www.w3schools.com/jsref/prop_win_localstorage.asp">w3schools</a><br/>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage">MDN Web Docs</a></li>
             <li></li>
         </ul>
     </main>
