--- a/wdd330/week01/index.html
+++ b/wdd330/week01/index.html
@@ -42,7 +42,10 @@
                 localStorage.setItem(storyName, storyHTML) to save data in those items<br/>
             <a href="https://www.w3schools.com/jsref/prop_win_localstorage.asp">w3schools</a><br/>
             <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage">MDN Web Docs</a></li>
-            <li></li>
+            <li>It is best to start mobile, because it is smoother to grow larger.</li>
+            <li>lazy loading is important for phones</li>
+            <li>No pop-ups</li>
+            <li>Place and make content.
         </ul>
     </main>
     <footer><a href="https://matthewfelton.github.io/">Return to the Hub</a></footer>
