--- a/wdd330/week02/index.html
+++ b/wdd330/week02/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
@@ -9,8 +9,8 @@
     <title>Week 02 Notes</title>
     <meta name="description" content="genric area for notes" />
     <link rel="stylesheet" href="https://matthewfelton.github.io/wdd330/assets/css/notes.css" />
-  </head>
-  <body>
+</head>
+<body>
     <header>
         <h1>WDD 330 Portfolio</h1>
         <nav>
@@ -20,15 +20,16 @@
     <hr/>
     <main>
         <h2>Week 02 Notes</h2>
-        <hr/>
-        <h3>Quotes</h3>
-        
-        <hr/>
         <h3>Questions</h3>
-        <p> </p>
+        <p>Is it considered better to define all your variables on a single let or const, or would is it better to break them into their own? </p>
         <hr/>
         <h3>Notes</h3>
         <ul>
+            <li>Let and Const are replacements for Var, ( let allows for in that function, where as const will span the whole document.)</li>
+            <li>join is used to change items to a string from array.</li>
+            <li>olacing a function before it is defined is called function hoisting.</li>
+            <li>JavaScript has an operator called typeof for finding a value of a item. ( typeof "hello" << 'string')</li>
+            <li>Destructing an array os the concept oftaking values out of an array and presenting thenm as individual values.<
             
         </ul>
         <hr/>
@@ -50,6 +51,6 @@
     </main>
     <footer><a href="https://matthewfelton.github.io/">Return to the Hub</a></footer>
     <script src="assets/js/button.js"></script>
-  </body>
+</body>
 
 </html>
