fixed spelling error

--- a/wdd330/week02/index.html
+++ b/wdd330/week02/index.html
@@ -27,7 +27,7 @@
         <ul>
             <li>Let and Const are replacements for Var, ( let allows for in that function, where as const will span the whole document.)</li>
             <li>join is used to change items to a string from array.</li>
-            <li>olacing a function before it is defined is called function hoisting.</li>
+            <li>placing a function before it is defined is called function hoisting.</li>
             <li>JavaScript has an operator called typeof for finding a value of a item. ( typeof "hello" << 'string')</li>
             <li>Destructing an array os the concept oftaking values out of an array and presenting thenm as individual values.<
             
