--- a/wdd330/week03/index.html
+++ b/wdd330/week03/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1"
     />
-    <title>Week 02 Notes</title>
+    <title>Week 03 Notes</title>
     <meta name="description" content="genric area for notes" />
     <link rel="stylesheet" href="https://matthewfelton.github.io/wdd330/assets/css/notes.css" />
 </head>
@@ -19,7 +19,7 @@
     </header>
     <hr/>
     <main>
-        <h2>Week 02 Notes</h2>
+        <h2>Week 03 Notes</h2>
         <h3>Questions</h3>
         <p>Is it considered better practice to use this, or to target things by their name?<br/>
         Can the object portions of javascript be similiar to objects in other languages?</p>
@@ -101,12 +101,12 @@
         </ul>
         <hr/>
         <h3>team activity</h3>
-        <a href="teamassignmen.html">Team Assignment</a>
+        <a href="teamassignment.html">Team Assignment</a>
         <hr/>
 
     </main>
     <footer><a href="https://matthewfelton.github.io/">Return to the Hub</a></footer>
-    <script src="assets/js/button.js"></script>
+    <script src="#"></script>
 </body>
 
 </html>
