--- a/wdd330/week04/index.html
+++ b/wdd330/week04/index.html
@@ -35,6 +35,13 @@
             <button type='reset'>Reset</button>
         </form>
           <li> <a href="https://www.sitepoint.com/premium/books/javascript-novice-to-ninja-2nd-edition/read/8">Link to Forms sitepoint</a></li>
+          <li>There are three main concepts in OOP: encapsulation, polymorphism and inheritance.</li>
+          <li>Encapsulation - the inner workings are kept hidden inside the object and only the essential functionalities are exposed to the end user,</li>
+          <li>Polymorphism - the same process can be used for different objects</li>
+          <li>Inheritance - taking the features of one object then adding some new features.</li>
+
+
+
         </ul>
         <hr/>
         <h3>team activity</h3>
