--- a/wdd330/week05/teamassignment.html
+++ b/wdd330/week05/teamassignment.html
@@ -4,27 +4,14 @@
     <meta charset="utf-8" />
     <title>Great Hikes (dynamic DOM example)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-          Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      }
-      img {
-        max-width: 100%;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-
-  <body>
+    <!--https://github.com/byui-cit/cit261/tree/gh-pages/solutions/week05-->>
     <main>
       <h1>Great hikes</h1>
-      <ul id="hikes" class="hikeStyles">
-        <!-- your hike list should be build here. -->
-      </ul>
+      <ul id="hikes" class="hikeStyles"></ul>
     </main>
 
-    <script src="hiking-start.js"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
