--- a/wdd330/week06/index.html
+++ b/wdd330/week06/index.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>To-Do List</h1>
-    <ul class=''></ul>
-    <form class="todoForm">
-        <input autofocus type="text" class="todoInput" placeholder="Please Enter a Task">
-        <input type="submit" value="+" class="todoSubmit">
+    <h1>Todos List</h1>
+    <ul class="todo_list"></ul>
+    <form id="add_todo" class="add_todo">
+        <input autofocus type="text" id="todo_input" placeholder="Please Enter a Task">
+        <input type="submit" value="+" class="todo_submit">
     </form>
-    <script src="main.js"></script>
+    <script src="ToDos.js" type="module"></script>
   </body>
 </html>
