--- a/wdd330/week06/index.html
+++ b/wdd330/week06/index.html
@@ -5,13 +5,19 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
-    <title>To-Do</title>
-    <meta name="description" content="Tell me what this is for" />
+    <title>ToDos</title>
+    <meta name="description" content="Todos that you can track" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Todos List</h1>
     <ul class="todo_list"></ul>
+    <div id="task-list-footer">
+      <div id="tasks-left"></div>
+      <button id="all-tasks-btn">All</button>
+      <button id="active-tasks-btn">Active</button>
+      <button id="completed-tasks-btn">Completed</button>
+    </div>
     <form id="add_todo" class="add_todo">
         <input autofocus type="text" id="todo_input" placeholder="Please Enter a Task">
         <input type="submit" value="+" class="todo_submit">
