--- a/wdd330/week06/index.html
+++ b/wdd330/week06/index.html
@@ -10,18 +10,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Todos List</h1>
-    <ul class="todo_list"></ul>
-    <div id="task-list-footer">
-      <div id="tasks-left"></div>
-      <button id="all-tasks-btn">All</button>
-      <button id="active-tasks-btn">Active</button>
-      <button id="completed-tasks-btn">Completed</button>
-    </div>
-    <form id="add_todo" class="add_todo">
-        <input autofocus type="text" id="todo_input" placeholder="Please Enter a Task">
-        <input type="submit" value="+" class="todo_submit">
-    </form>
+    <main>
+        <h1>Todos List</h1>
+        <hr/>
+        <ul class="todo_list"></ul>
+        <div id="task-list-footer">
+            <div id="tasks-left"></div>
+            <button id="all-tasks-btn">All</button>
+            <button id="active-tasks-btn">Active</button>
+            <button id="completed-tasks-btn">Completed</button>
+        </div>
+        <form id="add_todo" class="add_todo">
+            <input autofocus type="text" id="todo_input" placeholder="Please Enter a Task Todo" maxlength="32">
+            <input type="submit" value="+" class="todo_submit">
+        </form>
+    </main>
     <script src="ToDos.js" type="module"></script>
   </body>
 </html>
