added custom check marks

--- a/wdd330/week06/index.html
+++ b/wdd330/week06/index.html
@@ -21,7 +21,7 @@
             <button id="completed-tasks-btn">Completed</button>
         </div>
         <form id="add_todo" class="add_todo">
-            <input autofocus type="text" id="todo_input" placeholder="Please Enter a Task Todo" maxlength="32">
+            <input type="text" id="todo_input" placeholder="Please Enter a Task Todo" maxlength="32">
             <input type="submit" value="+" class="todo_submit">
         </form>
     </main>
