changed footer design

--- a/wdd330/week06/index.html
+++ b/wdd330/week06/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
     <title>ToDos</title>
     <meta name="description" content="Todos that you can track" />
+    <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
