added many fixes

--- a/wdd330/pokedex/index.html
+++ b/wdd330/pokedex/index.html
@@ -22,7 +22,7 @@
             </div>
         </header>
         <main>
-            <ul class="mon_list"></ul>
+            <ul class="mon_list" id="btnMind"></ul>
             
         </main>
         <footer>
