--- a/wdd330/pokedex/index.html
+++ b/wdd330/pokedex/index.html
@@ -29,6 +29,6 @@
             <button id="prev">Prev</button>
             <button id="next">Next</button>
         </footer>
-        <script src="pokedex.js" type="module"></script>
+        <script src="pokedex.js" type="module" oninput="liveSearch()"></script>
     </body>
 </html>
